# TraceViewer

./: .gitignore  CMakeLists.txt  README.md  suppressions.txt
cmake/: FindLibCapnp.cmake  FindLibCapstone.cmake  FindLibDwarf.cmake  FindLibElf.cmake
cmake/CapnProto/: CapnProtoConfig.cmake  CapnProtoConfigVersion.cmake  CapnProtoTargets-release.cmake  CapnProtoTargets.cmake
resources/: Info.plist
schema/: tracestreaming.capnp
src/: CustomTraceDialog.cpp  CustomTraceDialog.h  DebugTable.cpp  DebugTable.h  DwarfInfo.cpp  DwarfInfo.h  FileLoader.cpp  FileLoader.h  ListeningThread.cpp  ListeningThread.h  QtCustomUser.h  QtOutputStream.cpp  QtOutputStream.h  Result.h  TraceData.cpp  TraceData.h  TraceHierarchyFilterProxy.cpp  TraceHierarchyModel.cpp  TraceHierarchyModel.h  TraceModel.cpp  TraceModel.h  TraceViewWindow.cpp  TraceViewWindow.h  main.cpp
src/Disassembler/: Disassembler.cpp  Disassembler.h
src/Model/: DisassemblyInlinesModel.cpp  DisassemblyInlinesModel.h  DisassemblyModel.cpp  DisassemblyModel.h  TraceHierarchyFilterProxy.cpp  TraceHierarchyFilterProxy.h  TraceHierarchyModel.cpp  TraceHierarchyModel.h
src/View/: CustomTraceDialog.cpp  CustomTraceDialog.h  TraceTimeline.cpp  TraceTimeline.h  TraceViewWindow.cpp  TraceViewWindow.h
